-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: C glib - Compiler
-
Labels:None
-
Environment:
ArchLinux
GCC 5.3.0
GLib-2.46.2
Recently it suddenly started failing in my local environment, but no any of CI.
As it's assertion failure, I suspect it's due to glib version.
There were a few of them but adding some null check to generated code fixed the problem.
(/home/x/proj/thrift/clean/lib/c_glib/test/.libs/lt-testserialization:24158): GLib-CRITICAL **: g_hash_table_size: assertion 'hash_table != NULL' failed
/bin/sh: line 5: 24158 Trace/breakpoint trap (core dumped) ${dir}$tst
FAIL: testserialization