THRIFT-3632 c_glib testserialization fails with glib assertion